--- a/assets/assets/index.html
+++ b/assets/assets/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projet transversaux</title>
-    <link rel="stylesheet" href="formulaire.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preload" href="https://fonts.googleapis.com">
     <link rel="preload" href="https://fonts.gstatic.com" origine croisée>
 </head>
