--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     </div><hr>
     <h2 class="bkg_title">Projects</h2>
     <fieldset class="centrer_img">
-        <img src="tempsnip1.png" alt="image_def"  width="300" height="300">
-        <img src="Coderecette.png" alt="image_recette" width="300" height="300">
+        <img src="../Portfolio/assets/tempsnip1.png" alt="image_def"  width="300" height="300">
+        <img src="../Portfolio/assets/Coderecette.png" alt="image_recette" width="300" height="300">
     </fieldset><br>
     <fieldset class="centrer_img">
-        <a href="../FORMULAIRE TRANSPARENT/formulaire.html" target="_blank"><img src="tempsnip.png" alt="image_code" width="300" height="300"></a>
-        <a href="../hello.html" target="_blank"><img src="page.png" alt="image_recette" width="400" height="600"></a>
+        <a href="../Portfolio/assets/assets/index.html" target="_blank"><img src="../Portfolio/assets/tempsnip.png" alt="image_code" width="300" height="300"></a>
+        <a href="../Portfolio/assets/index.html" target="_blank"><img src="../Portfolio/assets/Kedjenou.jpg" alt="image_recette" width="400" height="600"></a>
     </fieldset>
     <h2 class="bkg_title">Send a message</h2>
     <fieldset>
