--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     </div><hr>
     <h2 class="bkg_title">Projects</h2>
     <fieldset class="centrer_img">
-        <img src="../Portfolio/assets/tempsnip1.png" alt="image_def"  width="200" height="200">
-        <img src="../Portfolio/assets/Coderecette.png" alt="image_recette" width="200" height="200">
+        <img src="../assets/tempsnip1.png" alt="image_def"  width="200" height="200">
+        <img src="../assets/Coderecette.png" alt="image_recette" width="200" height="200">
     </fieldset><br>
     <fieldset class="centrer_img">
-        <a href="../Portfolio/assets/assets/index.html" target="_blank"><img src="../Portfolio/assets/tempsnip.png" alt="image_code" width="400" height="370"></a>
-        <a href="../Portfolio/assets/index.html" target="_blank"><img src="../Portfolio/assets/Kedjenou.jpg" alt="image_recette" width="500" height="800"></a>
+        <a href="../assets/assets/index.html" target="_blank"><img src="../assets/tempsnip.png" alt="image_code" width="400" height="370"></a>
+        <a href="../assets/index.html" target="_blank"><img src="../assets/Kedjenou.jpg" alt="image_recette" width="500" height="800"></a>
     </fieldset>
     <a href="contact_me.html"><h4>Contact me</h4></a><hr>
     <h2 class="bkg_title">Send a message</h2>
